[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/meta_lobby.gd" id="1"]

[node name="MetaLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.08, 0.1, 0.14, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Root" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Margin/Root"]
layout_mode = 2
text = "META LOBBY"

[node name="TopRow" type="HBoxContainer" parent="Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UserIdInput" type="LineEdit" parent="Margin/Root/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "user id"
text = "player_001"

[node name="PasswordInput" type="LineEdit" parent="Margin/Root/TopRow"]
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "password"
text = "guest"

[node name="LoginButton" type="Button" parent="Margin/Root/TopRow"]
layout_mode = 2
text = "Login"

[node name="SaveDataButton" type="Button" parent="Margin/Root/TopRow"]
layout_mode = 2
text = "Save"

[node name="LoadDataButton" type="Button" parent="Margin/Root/TopRow"]
layout_mode = 2
text = "Load"

[node name="BackButton" type="Button" parent="Margin/Root/TopRow"]
layout_mode = 2
text = "Back"

[node name="Tabs" type="TabContainer" parent="Margin/Root"]
layout_mode = 2
size_flags_vertical = 3

[node name="EconomyTab" type="VBoxContainer" parent="Margin/Root/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EconomyInfo" type="Label" parent="Margin/Root/Tabs/EconomyTab"]
layout_mode = 2
text = "Shop / Inventory"

[node name="EconomyRow" type="HBoxContainer" parent="Margin/Root/Tabs/EconomyTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuyStarterButton" type="Button" parent="Margin/Root/Tabs/EconomyTab/EconomyRow"]
layout_mode = 2
text = "Buy Starter"

[node name="RefreshSnapshotButton" type="Button" parent="Margin/Root/Tabs/EconomyTab/EconomyRow"]
layout_mode = 2
text = "Refresh Snapshot"

[node name="SocialTab" type="VBoxContainer" parent="Margin/Root/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SocialInfo" type="Label" parent="Margin/Root/Tabs/SocialTab"]
layout_mode = 2
text = "Chat / Friend / Party / Guild"

[node name="SocialRow1" type="HBoxContainer" parent="Margin/Root/Tabs/SocialTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SendGlobalChatButton" type="Button" parent="Margin/Root/Tabs/SocialTab/SocialRow1"]
layout_mode = 2
text = "Send Chat"

[node name="AddFriendButton" type="Button" parent="Margin/Root/Tabs/SocialTab/SocialRow1"]
layout_mode = 2
text = "Add Friend"

[node name="SocialRow2" type="HBoxContainer" parent="Margin/Root/Tabs/SocialTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CreatePartyButton" type="Button" parent="Margin/Root/Tabs/SocialTab/SocialRow2"]
layout_mode = 2
text = "Create Party"

[node name="CreateGuildButton" type="Button" parent="Margin/Root/Tabs/SocialTab/SocialRow2"]
layout_mode = 2
text = "Create Guild"

[node name="LiveOpsTab" type="VBoxContainer" parent="Margin/Root/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LiveOpsInfo" type="Label" parent="Margin/Root/Tabs/LiveOpsTab"]
layout_mode = 2
text = "Mail / Item"

[node name="LiveOpsRow" type="HBoxContainer" parent="Margin/Root/Tabs/LiveOpsTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SendMailButton" type="Button" parent="Margin/Root/Tabs/LiveOpsTab/LiveOpsRow"]
layout_mode = 2
text = "Send Mail"

[node name="ClaimMailButton" type="Button" parent="Margin/Root/Tabs/LiveOpsTab/LiveOpsRow"]
layout_mode = 2
text = "Claim Mail"

[node name="CombatTab" type="VBoxContainer" parent="Margin/Root/Tabs"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CombatInfo" type="Label" parent="Margin/Root/Tabs/CombatTab"]
layout_mode = 2
text = "Skill / Trigger"

[node name="CombatRow" type="HBoxContainer" parent="Margin/Root/Tabs/CombatTab"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CastSkillButton" type="Button" parent="Margin/Root/Tabs/CombatTab/CombatRow"]
layout_mode = 2
text = "Cast Skill"

[node name="OutputPanel" type="PanelContainer" parent="Margin/Root"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputLog" type="RichTextLabel" parent="Margin/Root/OutputPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true
